objects/Contract.object
<CustomObject>
    <fields>
        <fullName>DB_Days__c</fullName>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>db_days_StartDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>StartDate db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>ContractLifecycleManagement</fullName>
        <active>true</active>
        <label>Contract Lifecycle Management</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>